test/invalid/baseline/enum-wo-comma.txt
Syntax error at line 1, since `enum NoComma`:
enum NoComma { "value1" "value2" };
                        ^ No comma between enum values
